Fix Contrast Issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: rgb(123, 237, 232);
   margin: 0;
   padding: 0;
 }
